Add Streaming & Voting Page

--- a/content.html
+++ b/content.html
@@ -35,6 +35,9 @@
           <a class="nav-link" href="mvs.html">MVs</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="guides.html">Streaming & Voting</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="index.html#contact">About</a>
         </li>
       </ul>
@@ -68,9 +71,9 @@
       <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-5JUKlSyu4B8jtx70CnSQtL">
         <p>TongTongTV</p>
       </a>
-      <!-- <a class="content-list" href="">
+      <a class="content-list" href="https://www.youtube.com/embed/videoseries?list=PLfCkSBog5L-5md4LRhnUlpTi-6SJ8zTl4">
         <p>Hello82</p>
-      </a> -->
+      </a>
       </a>
     </div>
   </section>
