--- a/guides.html
+++ b/guides.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ATEEZ MVs</title>
+  <title>Streaming & Voting</title>
   <link rel="shortcut icon" href="ateez.ico">
 
   <!-- Font Awsome Scripts -->
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-dark">
     <a class="navbar-brand" href="index.html">FOR ATEEZ</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,73 +36,21 @@
           <a class="nav-link" href="content.html">Shows & Segments</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="guides.html">Streaming & Voting</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="index.html#contact">About</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <h1>ATEEZ MVs</h1>
-  <section id="mv-list">
-    <div class="mv-list-container">
-      <a class="mv-list" href="https://www.youtube.com/embed/RqJ1rH9M5G0">
-        <p>Pirate King</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/tLV83ndOwz4">
-        <p>Treasure</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/nKU4OVH18mE">
-        <p>Say My Name</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/QbjmVyP9RFg">
-        <p>HALA HALA (Hearts Awakened, Live Alive)</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/ukbr7xyPoRQ">
-        <p>Promise</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/i_HzsHss94E">
-        <p>ILLUSION</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/FIInyEWWW-s">
-        <p>WAVE</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/7wcM9Eq3UbI">
-        <p>Aurora</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/ZLQm-8Z6C8M">
-        <p>Utopia (Japanese Ver.)</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/Z_BhMhZpAug">
-        <p>WONDERLAND</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/yW7wZX3DUaY">
-        <p>Answer</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/xU7vogho4R0">
-        <p>Answer (Japanese Ver.)</p>
-      </a>
-      <a class="mv-list" href="https://www.youtube.com/embed/2NArH91kHoQ">
-        <p>INCEPTION</p>
+  <h1>Streaming & Voting</h1>
+  <section id="guide-list">
+    <div class="guide-list-container">
+      <a class="guide-list" href="https://foratinyguide.carrd.co/">
+        <p>ATEEZ Comeback Guide</p>
       </a>
     </div>
   </section>
-
-  <section class="mv-player">
-    <button type="button" class="btn mv-button btn-dark">MV List</button>
-    <br>
-    <a class="link-button" target="_blank" href="#"><button type="button" class="btn btn-dark">Watch on YouTube</button></a>
-    <br>
-    <div class="spinner-border spinner-border-lg spinner-hide text-light" role="status">
-      <span class="sr-only">Loading...</span>
-    </div>
-    <div class="resp-container">
-      <iframe class="resp-iframe" src=" " frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  </section>
-  <footer id="contact">
+  <footer class="guide-footer" id="contact">
     <a href="https://t.me/bread_genie"><i class="fa fa-2x fa-telegram" aria-hidden="true"></i></a>
     <p class="footer-text">© Copyright 2020 Bread Genie <br>
       For Kami, Ahoe and all Atinys! <br>
