--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
               <a class="nav-link" href="content.html">Shows & Segments</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="guides.html">Streaming & Voting</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#ateez-social">Ateez Social</a>
             </li>
             <li class="nav-item">
